<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@android:color/white"
    android:padding="@dimen/padding_small">

        <com.google.android.exoplayer2.ui.PlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/video_player" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_below="@id/video_player"
            android:id="@+id/recipe_desc_text_wrapper"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/recipe_step_image_width"
                android:layout_height="@dimen/recipe_step_image_height"
                android:id="@+id/recipe_step_detail_image"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                tools:src="@drawable/ic_no_image"
                android:contentDescription="@string/recipe_step_image_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_step_detail_text"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            tools:text="@string/dummy_recipe_step_detail_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_below="@id/recipe_desc_text_wrapper"
            android:gravity="bottom"
            android:id="@+id/recipe_desc_btn_wrapper"
            android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/previous_step_btn"
            android:padding="@dimen/padding_medium"
            android:drawableLeft="@drawable/ic_previous_white"
            android:text="@string/previous_step_btn_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/next_step_btn"
                android:padding="@dimen/padding_medium"
                android:drawableRight="@drawable/ic_next_white"
                android:text="@string/next_step_btn_text"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

</RelativeLayout>