<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.lang.Integer" />

        <variable
            name="recipe"
            type="com.example.supjain.bakingapp.data.RecipeData" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_card_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_name_image"
                android:layout_width="@dimen/recipe_card_img_width"
                android:layout_height="@dimen/recipe_card_img_height"
                android:layout_gravity="center"
                android:contentDescription="@string/recipe_image_content_desc"
                android:scaleType="center"
                app:error="@{@drawable/ic_no_image}"
                app:imageUrl="@{recipe.recipeImageUrl}" />

            <TextView
                android:id="@+id/recipe_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:text="@{recipe.recipeName}"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                tools:text="@string/dummy_recipe_name" />

            <TextView
                android:id="@+id/recipe_serves_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{`Serves: `+ Integer.toString(recipe.recipeServings)}"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                tools:text="@string/dummy_serving_size_text" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>