<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_video_container"
        app:cardBackgroundColor="@android:color/white">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_step_detail_text_container"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_step_detail_text"
            android:drawableLeft="@drawable/ic_no_image"
            android:drawablePadding="@dimen/padding_medium"
            tools:text="@string/dummy_recipe_step_detail_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_step_navigation_container"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/previous_step_btn"
            android:drawableLeft="@drawable/ic_previous"
            android:text="@string/previous_step_btn_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/next_step_btn"
                android:drawableRight="@drawable/ic_next"
                android:text="@string/next_step_btn_text"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin_small"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>